--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -2,135 +2,106 @@
 <!--                   Footer                     -->
 <!-- ============================================ -->
 
-<footer id="cs-footer-273">
+<footer id="cs-footer-841">
+    
+    <!--SVG V Graphic-->
+    <img class="cs-graphic" decoding="async" src="./assets/images/triangleAsymmetricalNegative-2-bottom.png" alt="graphic" width="1920" height="163" aria-hidden="true">
+    
     <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
+            <div class="csa-flex-logos">
             <a aria-label="go back to home" class="cs-logo" href="">
-                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Footer/logo-light.svg" alt="logo" width="240" height="32">
+                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/olo-logo.svg" alt="logo" width="240" height="32">
             </a>
+            <!-- <p class="cs-text">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin Richard Latin professor at Hampden. Lorem Ipsum is not simply random text. 
+            </p> -->
             <div class="cs-social">
                 <a class="cs-social-link" aria-label="visit google profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" alt="google" width="11" height="11">
+                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/google-icon.svg" alt="google" width="6" height="11">
                 </a>
                 <a class="cs-social-link" aria-label="visit facebook profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" alt="facebook" width="6" height="11">
+                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/facebook-icon.svg" alt="facebook" width="11" height="11">
                 </a>
+                <!-- <a class="cs-social-link" aria-label="visit twitter profile" href="">
+                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Ftwit-white1.svg" alt="twitter" width="6" height="11">
+                </a> -->
                 <a class="cs-social-link" aria-label="visit instagram profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg" alt="instagram" width="11" height="11">
+                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/insta-icon.svg" alt="instagram" width="11" height="11">
                 </a>
+            </div>
             </div>
         </div>
         <!-- Links -->
-        <ul class="cs-nav">
-            <li class="cs-nav-li">
-                <span class="cs-header">Contact</span>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="tel:123-456 7890">(123) 456 7890</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
-            </li>
-        </ul>
-        <ul class="cs-nav">
-            <li class="cs-nav-li">
-                <span class="cs-header">Address</span>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">123 Avenue Street<br> Oak Harbor, WA 98101</a>
-            </li>
-        </ul>
-        <!-- Contact Info -->
-        <ul class="cs-nav">
-            <li class="cs-nav-li">
-                <span class="cs-header">Opening Hours</span>
-            </li>
-            <li class="cs-nav-li">
-                Tuesday, Thursday, Friday: 9am-6pm
-            </li>
-            <li class="cs-nav-li">
-                ​(closed for lunch 12pm-2pm)
-            </li>
-        </ul>
+        <div class="cs-ul-wrapper">
+            <span class="cs-header">Quick Links</span>
+            <ul class="cs-ul cs-ul-1">
+                <li class="cs-li">
+                    <a class="cs-link" href="">Home</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="">About</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="">Services</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="">Portfolio</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="">Blog</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="">Contact</a>
+                </li>
+                <!-- <li class="cs-li">
+                    <a class="cs-link" href="">Contact</a>
+                </li> -->
+            </ul>
+        </div>
+        <div class="cs-ul-wrapper">
+            <!-- Contact Info -->
+            <span class="cs-header">Contact Information</span>
+            <ul class="cs-ul">
+                <!-- <li class="cs-li"> -->
+                    <!--Make this link go to the google page-->
+                    <!-- <a class="cs-link" href="" target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fclock3-grey.svg" alt="clock icon" width="20" height="20">
+                        M-F 8am – 5:30pm
+                    </a>
+                </li> -->
+                <li class="cs-li">
+                    <a class="cs-link" href="tel:+64 21 123 4567">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/phone-icon.svg" alt="phone icon" width="20" height="20">
+                        +64 21 123 4567
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="mailto:info@olo.nz">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/email-icon.svg" alt="email icon" width="20" height="20">
+                        info@olo.nz
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <!--Make this link go to the google page-->
+                    <a class="cs-link" href="" target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/address-icon.svg" alt="pin icon" width="20" height="20">
+                        Auckland, NZ
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="cs-bottom">
+        <span class="cs-credit">
+            © Copyright 2024 <a href="" class="cs-credit-link" target="_blank">Olo Web Designs</a>
+        </span>
+        <!-- <div class="cs-bottom-links">
+            <a href="" class="cs-bottom-link">Privacy Policy</a>
+            <a href="" class="cs-bottom-link">Terms Of Use</a>
+        </div> -->
     </div>
 </footer>
                                 
-
-<!-- ============================================ -->
-<!--                   Footer                     -->
-<!-- ============================================ -->
-
-<!-- <footer id="footer">
-    <div class="container">
-        <div class="left-section">
-            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/svgs/logo-white.svg" alt="logo" width="264" height="78"></a>
-            <p>
-                Extra content if you need it, if not you can delete this whole p tag. I usually do.
-            </p>
-        </div>
-        <div class="right-section">
-            <div class="lists">
-                <ul>
-                    <li>
-                        <h2>Information</h2>
-                    </li>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About Us</a>
-                    </li>
-                    <li>
-                        <a href="/projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/testimonials">Reviews</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Services</h2>
-                    </li>
-                    <li>Service1</li>
-                    <li>Service2</li>
-                    <li>Service4</li>
-                    <li>Service5</li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Contact</h2>
-                    </li>
-                    <li>
-                        <a href="/contact">
-                            {{client.address.lineOne}}<br>
-                            {{client.address.lineTwo}}<br>
-                            {{client.address.city}}
-                            {{client.address.state}}
-                            {{client.address.zip}}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="tel:{{client.phoneForTel}}">
-                            T:
-                            {{client.phoneFormatted}}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:{{client.email}}">Click to Email</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="credit">
-        <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Your Company Name</a>
-        <span class="copyright">
-            Copyright {% year %} - Present</span>
-    </div>
-</footer> -->
+                                
