--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -7,7 +7,7 @@
       <!--Nav Logo-->
       <a href="" class="cs-logo" aria-label="back to home">
           <!-- <img src="assets/svgs/bb-logo.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async"> -->
-          <img src="assets/svgs/olo-logo.svg" alt="logo" width="32" height="24" aria-hidden="true" decoding="async">
+          <img src="assets/svgs/olo-logo-wds.svg" alt="logo" width="32" height="24" aria-hidden="true" decoding="async">
       </a>
       <!--Navigation List-->
       <nav class="cs-nav" role="navigation">
